--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -22,4 +22,5 @@ jobs:
         python-version: 3.8 
     - name: Run Test
       run: |
+        export PYTHONPATH="${PYTHONPATH}:./"
         python ./test/test.py
